# tokenpay

./: .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac  macdeployqtplus  package.sh  tokenpay.desktop  tokenpayd.desktop
.github/workflows/: commit.yml  macos12.yml  macos13.yml  ubuntu-depends.yml  ubuntu20-cli.yml  ubuntu20-nondep.yml  ubuntu20.yml  windows.yml
build-aux/m4/: bitcoin_qt.m4  tokenpay_find_bdb48.m4
depends/: Makefile  config.site.in  funcs.mk
depends/homebrew/: boost1651.rb
depends/patches/icu4c/: icu-001-dont-build-static-dynamic-twice.patch
depends/patches/qt/: WebKit1PatchX11.patch  WebKit2TargetPatchX11.patch  fix_configure_mac.patch  fix_limits_header.patch  fix_mingw_cross_compile.patch  fix_no_printer.patch  fix_rcc_determinism.patch  fix_riscv64_arch.patch  mac-qmake.conf  makegrammar.patch  widgetsapiPatchX11.patch  xkb-default.patch
m4/: boost.m4
patch/: bdb_clang.diff  boost.patch
src/: Makefile.am  alert.cpp  anonymize.cpp  init.cpp  net.cpp  netbase.cpp  netbase.h  rpcrawtransaction.cpp
src/qt/: trafficgraphwidget.cpp
src/qt/res/: index.html
src/qt/res/assets/css/: font-awesome.css  font-awesome.min.css  framework-icons.min.css  framework.min.css  tokenpay.min.css
src/qt/res/assets/js/pages/: send.min.js
src/qt/res/css/: font-awesome.min.css
